Fixing overflow issue for generator dropdowns.

--- a/src/routes/generator/generator.css
+++ b/src/routes/generator/generator.css
@@ -43,7 +43,6 @@
   border: 1px solid #070722;
   padding: 10px 15px;
   background-color: #eeeef3;
-  overflow: auto;
   min-width: 400px;
   max-width: 800px;
 }
